overflow fix

--- a/src/components/shared/hostRentalCard.css
+++ b/src/components/shared/hostRentalCard.css
@@ -38,7 +38,7 @@
     width: 300px;
     text-overflow: ellipsis;
 }
-.room-name {
+.rental-room-name {
     overflow: hidden;
     text-overflow: ellipsis;
 }
